--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack && mv .next dist",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
